--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
-        android:name="org.videolan.vlc.VLCApplication"
+        android:name="org.videolan.vlc.app.VLCApplication"
         android:debuggable="true"
         android:icon="@drawable/icon"
         android:logo="@drawable/header_logo"
